Overflow fix.

--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,7 @@
 
 html,  body {
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 body {
   font-family: "OCRA";
